Updated stale external links

--- a/installconfig/debian/preseed.cfg
+++ b/installconfig/debian/preseed.cfg
@@ -11,8 +11,8 @@ d-i netcfg/get_hostname string
 d-i netcfg/get_domain string 
 
 d-i mirror/country string manual
-d-i mirror/http/hostname string mirror.internode.on.net
-d-i mirror/http/directory string /pub/debian
+d-i mirror/http/hostname string httpredir.debian.org
+d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 #d-i mirror/suite string stable
 
