--- a/config-example.json
+++ b/config-example.json
@@ -3,5 +3,7 @@
 	"_comment": "If using a registered product update the product_key and set trial to 'false'.",
 	"_comment": "See doc/windows-licenses.adoc for more information.",
 	"trial": "true",
-	"product_key": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX"
+	"product_key": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
+	"username": "vagrant",
+	"password": "vagrant"
 }
