--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
-install: pip install -r requirements.txt
+install: pip install -r requirements.txt && pip install pylint
 sudo: false
 script: make test
