--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
-  - "3.2"
+# disabled since pylint is currently broken on 3.2
+#  - "3.2"
   - "3.3"
   - "3.4"
   - "3.5"
