moved doc/ to docs/ following python convention

--- a/config-example.json
+++ b/config-example.json
@@ -1,7 +1,7 @@
 {
 	"iso_path": "/path/to/your/windows/isos/",
 	"_comment": "If using a registered product update the product_key and set trial to 'false'.",
-	"_comment": "See doc/windows-licenses.adoc for more information.",
+	"_comment": "See docs/windows-licenses.adoc for more information.",
 	"trial": "true",
 	"product_key": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
 	"username": "vagrant",
