Compose JSON packer templates out of smaller files and use a JS config
* config.js is now a javascript file that gets minified into a json file by malboxes
* Comments are thus allowed and used to enable or disable features (IDA debuggers and Tools uploads)
* Packer template file is built based on features enabled or disabled
* Removed duplication in packer profiles

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include LICENSE README.adoc TODO.adoc
 
 # Include the data files
-include config-example.json
+include config-example.js
 graft docs
 prune docs/presentation/
 graft malboxes
