Jenkins Dockerfile simplification

--- a/tests/smoke/Dockerfile
+++ b/tests/smoke/Dockerfile
@@ -11,16 +11,11 @@ ARG group=jenkins
 ARG uid=1000
 ARG gid=1006
 # [...]
-ARG JENKINS_HOME=/var/jenkins_home
-
-ENV JENKINS_HOME $JENKINS_HOME
 
 # Jenkins is run with user `jenkins`, uid = 1000
 # If you bind mount a volume from the host or a data container,
 # ensure you use the same uid
-RUN mkdir -p $JENKINS_HOME \
-  && chown ${uid}:${gid} $JENKINS_HOME \
-  && groupadd -g ${gid} ${group} \
+RUN groupadd -g ${gid} ${group} \
   && useradd -d "$JENKINS_HOME" -u ${uid} -g ${gid} -m -s /bin/bash ${user}
 
 USER ${user}
