--- a/tests/smoke/Dockerfile
+++ b/tests/smoke/Dockerfile
@@ -5,7 +5,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certifi
     echo "deb http://download.virtualbox.org/virtualbox/debian xenial contrib" >> /etc/apt/sources.list.d/virtualbox.list && \
     apt-get update && apt-get install -y --no-install-recommends virtualbox-5.2 module-init-tools python3 python3-pip python3-setuptools wget unzip bash git && \
     wget https://releases.hashicorp.com/packer/1.0.3/packer_1.0.3_linux_amd64.zip && unzip packer_1.0.3_linux_amd64.zip -d packer && \
-    mv packer/packer /usr/local/bin/ && chmod a+x /usr/local/bin/packer && rm packer_1.0.3_linux_amd64.zip && rmdir packer
+    mv packer/packer /usr/local/bin/ && chmod a+x /usr/local/bin/packer && rm packer_1.0.3_linux_amd64.zip && rmdir packer && \
+    VBOXVER=$(VBoxManage --version | cut -dr -f1) && wget "https://download.virtualbox.org/virtualbox/${VBOXVER}/Oracle_VM_VirtualBox_Extension_Pack-${VBOXVER}.vbox-extpack" && \
+    VBoxManage extpack install --accept-license=56be48f923303c8cababb0bb4c478284b688ed23f16d775d729b89a2e8e5f9eb Oracle_VM_VirtualBox_Extension_Pack-${VBOXVER}.vbox-extpack && \
+    rm Oracle_VM_VirtualBox_Extension_Pack-${VBOXVER}.vbox-extpack
 
 
 # Config between delimiters taken from https://github.com/jenkinsci/docker/blob/master/Dockerfile
